# Clip_Faiss_Streamlit

./: .gitignore  README.md  environment.yml  packages.txt  pyproject.toml  requirements.txt  run.py
.streamlit/: config.toml  secrets.toml
src/: __init__.py  config.py  faiss_utils.py  main.py  main.py.bak
vector_index/: vector.index  vector.index.metadata  vector.index.paths
