[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip_faiss_search"
version = "0.1.0"
description = "Image search using CLIP embeddings and FAISS indexing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "faiss-cpu==1.7.4",
    "sentence-transformers==2.2.2",
    "matplotlib>=3.7",
    "pillow>=9.0",
    "numpy>=1.22",
    "scikit-learn>=1.0.0",
    "streamlit>=1.20.0",
    "tqdm>=4.64.0",
    "requests>=2.28.0",
]



[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}